<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="edu.appstate.mccannsa.rememoir.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_navigation_tasks_to_createTaskFragment"
            app:destination="@id/createTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.appstate.mccannsa.rememoir.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_journal"
        android:name="edu.appstate.mccannsa.rememoir.ui.journal.JournalFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" >
        <action
            android:id="@+id/action_navigation_journal_to_createEntryFragment"
            app:destination="@id/createEntryFragment" />
    </fragment>
    <fragment
        android:id="@+id/createTaskFragment"
        android:name="edu.appstate.mccannsa.rememoir.CreateTaskFragment"
        android:label="@string/title_create_task"
        tools:layout="@layout/fragment_create_task" >
        <action
            android:id="@+id/action_createTaskFragment_to_navigation_tasks2"
            app:destination="@id/navigation_tasks" />
    </fragment>
    <fragment
        android:id="@+id/createEntryFragment"
        android:name="edu.appstate.mccannsa.rememoir.CreateEntryFragment"
        android:label="@string/title_create_entry"
        tools:layout="@layout/fragment_create_entry" >
        <action
            android:id="@+id/action_createEntryFragment_to_navigation_journal"
            app:destination="@id/navigation_journal" />
    </fragment>
</navigation>